--- a/functions/package.json
+++ b/functions/package.json
@@ -3,7 +3,7 @@
   "description": "Cloud Functions for Firebase",
   "scripts": {
     "lint": "eslint .",
-    "serve": "firebase serve --only functions",
+    "serve": "firebase serve --only hosting,functions",
     "shell": "firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
@@ -13,9 +13,13 @@
     "node": "8"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.4",
+    "ejs": "^2.6.2",
     "express": "^4.17.1",
     "firebase-admin": "^8.0.0",
-    "firebase-functions": "^3.0.0"
+    "firebase-functions": "^3.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "request": "^2.88.0"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
