--- a/functions/package.json
+++ b/functions/package.json
@@ -19,6 +19,7 @@
     "firebase-admin": "^8.0.0",
     "firebase-functions": "^3.0.0",
     "jsonwebtoken": "^8.5.1",
+    "path": "^0.12.7",
     "request": "^2.88.0"
   },
   "devDependencies": {
