Changed Firebase rewrite behaviour. Made login page design

--- a/firebase.json
+++ b/firebase.json
@@ -11,6 +11,9 @@
   "hosting": {
 	"public": "public",
 	"rewrites": [{
+		"source":"/static",
+		"destination":"/static"
+	},{
 		"source": "**",
 		"function": "app"
 	}],
